--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/fontawesome.min.css" integrity="sha512-d0olNN35C6VLiulAobxYHZiXJmq+vl+BGIgAxQtD5+kqudro/xNMvv2yIHAciGHpExsIbKX3iLg+0B6d0k4+ZA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -58,7 +59,7 @@
             <label for="search-packages" class="form-label">Select Package</label>
             <input name="search-packages" type="text" class="form-control" id="searchInput" oninput="filterOptions()" placeholder="Search for package . . .">
           </div>
-          <select name="package" id="packageSelect" class="form-control mt-2" required>
+          <select name="package" id="packageSelect" class="form-control" required>
             {% if identifiers %}
             {% for identifier in identifiers %}
             <option value="{{ identifier.split()[2] }}">{{ identifier }}</option>
@@ -67,9 +68,9 @@
             <option disabled>No packages detected. Connect your USB device and run Frida.</option>
             {% endif %}
           </select>
-          <div class="mt-3">
+          <div class="mt-3" id="chooseScript">
             <label for="selected_script" class="form-label">Select Bypass Script</label>
-            <select name="selected_script" id="selectedScript" class="form-select" aria-label="Default select example">
+            <select name="selected_script[]" id="selectedScript" class="form-select mb-2" aria-label="Default select example">
               <optgroup label="Your Android Script" data-directory="Script Directory 1">
                 {% for script in bypass_scripts_android %}
                 <option value="{{ script['file_name'] }}">{{ script['description'] }} - {{ script['file_name'] }}</option>
@@ -82,6 +83,7 @@
               </optgroup>
             </select>
           </div>
+          <button type="button" class="btn btn-warning mt-2" onclick="multipleScript()"><b><span class="fa fa-plus"></span></b> Other Script</button>
           <div class="mt-3">
             <label for="script_content" class="form-label">Script Content</label>
             <textarea class="form-control" name="script_content" id="scriptContent" rows="9" placeholder="Script Content"></textarea>
@@ -163,6 +165,6 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
-      ></script>
+      ></script>      
   </body>
 </html>
