--- a/templates/features.html
+++ b/templates/features.html
@@ -1,22 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Frida Script Runner</title>
+{% extends "base.html" %}
+{% block title %}
+    <title>Frida Script Runner | Tools</title>
+{% endblock %}
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Ubuntu+Mono:wght@400;700&display=swap" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="../static/custom.css" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.3/socket.io.js"></script>
-</head>
-
-<body class="bg-light">
+{% block body %}
   <br>
   <div class="container1">
     <!-- <div class=" justify-content-center logo">
@@ -239,16 +226,8 @@
       </div>
     </div>
   </div>
-
   <div class="footer">
     <a class="credit" href="https://secrash.com" target="_blank"><span>2025 © Secrash</span></a>
   </div>
-
-  <div class="wave"></div>
-  <div class="wave"></div>
-  <div class="wave"></div>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="../static/features.js"></script>
-</body>
-</html>
+  <script src="{{ url_for('static', filename='js/features.js') }}"></script>
+{% endblock %}
