--- a/templates/no-usb.html
+++ b/templates/no-usb.html
@@ -1,89 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html" %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta content='IE=edge' http-equiv='X-UA-Compatible' />
+{% block title %}
     <title>Frida Script Runner | Lost's USB</title>
+{% endblock %}
 
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}" class="rel">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-    <style>
-        body {
-    margin: auto;
-    font-family: Poppins;
-    overflow: auto;
-    background: linear-gradient(315deg, #7311a9 11%, #204ecf 33%, #343fa8 77%);
-    animation: gradient 15s ease infinite;
-    background-size: 400% 400%;
-    background-attachment: fixed;
-}
-
-@keyframes gradient {
-    0% {
-        background-position: 0% 0%;
-    }
-    50% {
-        background-position: 100% 100%;
-    }
-    100% {
-        background-position: 0% 0%;
-    }
-}
-
-.wave {
-    background: rgb(255 255 255 / 25%);
-    border-radius: 1000% 1000% 0 0;
-    position: fixed;
-    width: 200%;
-    height: 25em;
-    animation: wave 10s -3s linear infinite;
-    transform: translate3d(0, 0, 0);
-    opacity: 0.8;
-    bottom: 0;
-    left: 0;
-    z-index: -1;
-}
-
-.wave:nth-of-type(2) {
-    bottom: -1.25em;
-    animation: wave 18s linear reverse infinite;
-    opacity: 0.8;
-}
-
-.wave:nth-of-type(3) {
-    bottom: -2.5em;
-    animation: wave 20s -1s reverse infinite;
-    opacity: 0.9;
-}
-
-@keyframes wave {
-    2% {
-        transform: translateX(1);
-    }
-
-    25% {
-        transform: translateX(-25%);
-    }
-
-    50% {
-        transform: translateX(-50%);
-    }
-
-    75% {
-        transform: translateX(-25%);
-    }
-
-    100% {
-        transform: translateX(1);
-    }
-}
-    </style>
-</head>
-
-<body>
+{% block body %}
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/no-usb.css') }}" class="rel">
     <section>
         <h3 class="itemTitle">No USB or Connected Device Found !</h3>
         <br><br>
@@ -108,14 +30,6 @@
             </b>
         </p>
     </section>
-    <div class="wave">
-        <div class="wave"></div>
-    </div>
-    <div class="wave">
-        <div class="wave"></div>
-    </div>
-    <div class="wave">
-        <div class="wave"></div>
-    </div>
-</body>
-</html>
+
+
+{% endblock %}
